kubernetes/apps/default/jellyfin/app/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gojellyfin-transcode
spec:
  serviceName: gojellyfin-transcode
  replicas: 5
  selector:
    matchLabels:
      app: gojellyfin-transcode
  template:
    metadata:
      labels:
        app: gojellyfin-transcode
    spec:
      containers:
        - name: gojellyfin-transcode
          image: ghcr.io/freekingdean/gojellyfin:main
          args: ["transcoder"]
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "8"
              memory: "32Gi"
            limits:
              memory: "64Gi"
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: transcode
              mountPath: /transcode
            - name: ec-media
              mountPath: /ec-media
      volumes:
        - name: tmp
          emptyDir: {}
        - name: transcode
          emptyDir: {}
        - name: ec-media
          persistentVolumeClaim:
            claimName: ec-media
