kubernetes/apps/default/jellyfin/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gojellyfin-transcode-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: gojellyfin-transcode
  ports:
    - name: http
      port: 8081
      targetPort: 8081
