kubernetes/apps/default/jellyfin/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - jellyfin.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gojellyfin-web
  labels:
    app.kubernetes.io/name: gojellyfin
    app.kubernetes.io/component: web
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - gojellyfin.deangalvin.dev
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /web/
            statusCode: 302
    - matches:
        - path:
            type: PathPrefix
            value: /web
      backendRefs:
        - name: gojellyfin-web
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gojellyfin-api
  labels:
    app.kubernetes.io/name: gojellyfin
    app.kubernetes.io/component: api
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - gojellyfin.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gojellyfin
          port: 80
